fixing distribuidores button on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -818,6 +818,7 @@ body form {
 	}
 
 	#button-tienda-light {
+		font-size: 0.9em;
 		padding: 10px;
 	}
 
